# OpenGLVoxelEngine

./: CMakeLists.txt  README.md  compile.bat  run.bat
src/: Game.cpp  Game.h  main.cpp
src/lib/: glad.c  glad.txt
